# paralelni-milkshake

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
cpp/: Makefile  bit_manipulation.hpp  encoder.hpp  huffman.hpp  input.hpp  output.hpp  rle.hpp  stream.hpp  tester.hpp  types.hpp
cpp/pipeline/: pipeline.cpp  run.sh  stream.hpp
cpp/pipesquare/: pipesquare.cpp  run.sh
cpp/sequential/: run.sh  sequential.cpp
out_encoded/: out1.txt
sequential-c/: run.sh  sequential.c  sequential.cpp
sequential-c/encoder/: encoder.h  encoder.hpp
sequential-c/io/: input.h  input.hpp  output.h  output.hpp
